--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,189 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --gap: max(10px, min(3vw, 3vh));
+  --goalcolor: gold;
+
+  touch-action: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+
+  margin: var(--gap);
+  background-color: #F7F9F9;
+  overflow: hidden;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+button:hover {
+  filter: brightness(97.5%);
 }
 
-body {
-  margin: 0;
+.main {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: stretch;
+  gap: var(--gap);
+  width: 100%;
+  height: calc(100vh - 3 * var(--gap));
+}
+
+.header {
+  flex: 0 0 auto;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  gap: var(--gap);
+}
+
+.header-left {
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: var(--gap);
+}
+
+.header-right {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  gap: 5px;
+  padding-right: 5px;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 5vh;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+.btn-header {
+  font-size: 2.5vh;
+  padding: 1.5vh;
+  border: 1.5px solid dimgray;
+  border-radius: 3vh;
+}
+
+.pulse {
+  animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+  0% { box-shadow: 0 0 0 var(--goalcolor); }
+  50% { box-shadow: 0 0 2em var(--goalcolor); }
+  100% { box-shadow: 0 0 0 var(--goalcolor); }
+}
+
+.depressed {
+  background-color: lightgray;
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.selector-body {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, 35vh), 1fr));
+  gap: var(--gap);
+  overflow-y: auto;
+  padding-right: 5px;
+}
+
+.btn-stage {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: var(--gap);
+  height: 10vh;
+  padding: 0 5vh;
+  border: 2px solid dimgray;
+  border-radius: 5vh;
+}
+
+.btn-stage.cleared {
+  background-color: white;
+  opacity: 0.5;
+  mix-blend-mode: normal;
+}
+
+.btn-stage-id {
+  flex: 0 0 auto;
   font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-size: 3vh;
+  font-style: italic;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.btn-stage-id.tick {
+  color: green;
+}
+
+.btn-stage-canvas {
+  flex: 1 1 auto;
+  height: 100%;
+}
+
+.stage-body {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  gap: var(--gap);
+}
+
+.canvas-container {
+  flex: 1 1 auto;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.stage-body-dials {
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  gap: var(--gap);
+}
+
+.dials {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: var(--gap);
+  touch-action: none;
+}
+
+.dial:hover {
+  filter: drop-shadow(0 0 0.5em lightgray);
+}
+
+.dial-hint {
+  animation:
+    glow-hint 2s infinite, /* pulse doesn't work here */
+    rotate-hint 4s infinite ease-in-out;
+  transform-origin: center;
+}
+
+@keyframes glow-hint {
+  0% { filter: drop-shadow(0 0 2em var(--goalcolor)); }
+  50% { filter: none; }
+  100% { filter: drop-shadow(0 0 2em var(--goalcolor)); }
+}
+
+@keyframes rotate-hint {
+  0% { transform: rotate(0deg); }
+  20% { transform: rotate(20deg); }
+  40% { transform: rotate(0deg); }
 }
